--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,11 +14,11 @@
 
 // sass dima
 @import './header';
-@import './header-dron';
 @import './footer';
 @import './footer-dron';
 @import './404';
 @import './loader';
+
 
 
 
@@ -244,6 +244,7 @@
 
 @import './standart-elements';
 @import './form'; // main style
+@import './hover-links.scss'; // main style
 @import './assets/templates'; // main style
 @import './pages/home.scss';
 @import './pages/location.scss';
@@ -263,3 +264,4 @@
 @import './menu-dron';
 @import './pages/contacts.scss';
 @import './pages/home-dron.scss';
+@import './header-dron';
