--- a/src/pug/components/popup/popup.scss
+++ b/src/pug/components/popup/popup.scss
@@ -12,7 +12,7 @@
 
 .call-popup {
   padding-top: var(--header-h);
-  background-color:#f9f9f970 ;
+  background-color:#D9DBDF ;
   display: flex;
   align-items: center;
   justify-content: center;
