--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -27,6 +27,7 @@ body {
 	min-width: 320px;
 	line-height: 1.5em;
 	font-family: $default-font;
+  font-weight: 400;
 	overflow-x: hidden;
 	font-size: 14px;
 }
