--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -131,6 +131,9 @@ justify-items:start;
   .main-button {
     margin-top: 20px;
   }
+  @include from(1680px){
+      max-width: 1360px;
+  }
   @include to(768px){
     grid-template-columns: 66.6% 33.3%;
     &>* {
@@ -272,6 +275,9 @@ justify-items:start;
       width: 100%;
     }
   }
+  @include from(1680px){
+    max-width: 1360px;
+  }
 }
 
 
@@ -286,6 +292,9 @@ justify-items:start;
   display: flex;
   align-items: center;
   justify-content: center;
+  &.active {
+    background-color: var(--color-architecture);
+  }
   @include from(769px){
     &:hover {
       background-color: var(--color-architecture);
@@ -303,10 +312,16 @@ justify-items:start;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 50px;
+  
   &>*:nth-child(n+2){
     margin-left: var(--gap);
   }
+  @include to(950px){
+    margin-top: 30px;
+  }
   @include to(575px){
+    margin-top: 20px;
     --gap:10px;
   }
 }
@@ -516,6 +531,18 @@ justify-items:start;
       left: var(--self-side-padding);
       top: calc(var(--self-vert-padding) + 130px);
     }
+    @include from(950px){
+      &__arrow-counter-wrap {
+        width: calc(100% - (var(--page-side-fields) * 2));
+      }
+      .prev-gallery {
+        margin-right: auto;
+      }
+      .next-gallery {
+        margin-left: auto;
+      }
+    }
+    
     @include from(769px) {
         &__img-slider img:hover {
             cursor: pointer;
