--- a/src/assets/styles/pages/documents.scss
+++ b/src/assets/styles/pages/documents.scss
@@ -44,9 +44,14 @@
     margin-bottom: 20px;
     max-width: 320px;
     break-inside: avoid-column;
+    margin-left: auto;
+    margin-right: auto;
   }
   @include from(1680px){
-    column-count: 4;
+    column-count: 3;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1360px;
     &>* {
     }
 
