--- a/src/assets/styles/pages/news.scss
+++ b/src/assets/styles/pages/news.scss
@@ -6,6 +6,8 @@
   gap: 0px 0px;
   background-color:#fff;
   border: 1px solid #DBDBDB;
+  text-decoration: none;
+  color: black;
   grid-template-areas:
     "decor title title"
     "decor preview image"
@@ -85,6 +87,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    transition: 2s ease-in-out;
     img {
       position: absolute;
       left: 0;
@@ -93,6 +96,17 @@
       height: 100%;
       object-fit: cover;
     }
+  }
+  @include from(769px){
+    &:hover &__image &__fixed-proportions {
+      transition: 1s ease-in-out;
+        transform: scale(1.2);
+      }
+    
+  }
+  @include from(1680px){
+    max-width: 1200px;
+      --decor-size:65px;
   }
   @include to(768px){
     grid-template-rows: auto 25vh  auto auto;
