--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -13,13 +13,15 @@ body[id*='values']{
   left: 0;
   margin-left: calc(var(--page-side-fields) * -1);  
   // Высота тайтла страницы и хлебных крошек
-      margin-top: calc((var(--header-h) + 60px + 85px) * -1);
+      margin-top: calc((var(--header-h) + 60px + 130px) * -1);
   top: var(--header-h);
   width: 100vw;
   height: calc(100vh - var(--header-h));
+  height: 100vh;
   .slide.active {
     width: calc(100% - (60px * (var(--slides-count) - 1)));
     pointer-events: none;
+    cursor: initial;
   }
   .slide:after {
     content: '';
@@ -30,7 +32,7 @@ body[id*='values']{
     width: 100%;
     height: 100%;
     opacity: 1;
-    transition: 1.5s;
+    transition: 0.5s;
   }
   .slide.active:after {
     opacity: 0;
@@ -44,6 +46,7 @@ body[id*='values']{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    cursor: pointer;
     
   }
   .info-list-item  {
@@ -91,6 +94,11 @@ body[id*='values']{
     font-size: 96px;
     line-height: 80px;
     font-weight: normal;
+  }
+  @include from(769px){
+    .slide:hover:after {
+      background-color:rgba(255, 255, 255, 0.5);
+    }
   }
   @include from(1680px){
     .slide {
