--- a/src/pug/components/seo-block/seo-block.scss
+++ b/src/pug/components/seo-block/seo-block.scss
@@ -73,10 +73,16 @@
     margin-left: auto;
     margin-right: auto;
   }
+  @include from(1680px){
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 50px;
+  }
   @include to(575px){
       padding-left: 14px;
       padding-right: 14px;
       --decor-height:30px;
+      margin-bottom: 20px;
       &__text {
         font-size: 14px;
       }
