--- a/src/assets/styles/pages/build-progress.scss
+++ b/src/assets/styles/pages/build-progress.scss
@@ -1,3 +1,15 @@
+body[id*="build-progress"]{
+  @include from(576px){
+    .pagination {
+      margin-top: 40px;
+    }
+  }
+  @include to(575px){
+    .pagination  {
+      margin-top: 0;
+    }
+  }
+}
 .percent-block{
   --digit-size:64px;
   display: flex;
